--- a/data/themes/jaws/style.rtl.css
+++ b/data/themes/jaws/style.rtl.css
@@ -296,10 +296,11 @@ background:#fff;
 color:#325994 !important;
 }
 #headbar .menu ul ul{
-width:220px;
 right:0;
 top:26px;
 height:0;
+z-index:99;
+width:220px;
 position:absolute;
 visibility:hidden;
 }
